Fixed the header and made the content stretch to fill

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -4,6 +4,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .header {
@@ -14,6 +15,7 @@ body {
   align-items: center;
   font-weight: 900;
   font-size: 32px;
+  padding-left: 16px;
 }
 
 .footer {
@@ -26,6 +28,8 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
+  flex: 1 0 auto;
 }
 
 .card {
@@ -36,4 +40,5 @@ body {
 
 .content{
   display: flex;
+  flex: auto;
 }
